--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./index.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
@@ -15,19 +22,24 @@
     <title>Frontend Mentor | Tip calculator app</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <style></style>
   </head>
   <body>
-    Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip Amount /
-    person Total / person Reset
+    <div class="container">
+      <div class="title">
+        <h3>S P L I</h3>
+        <h3>T T E R</h3>
+      </div>
+    </div>
+    <div class="container" id="spliter-background">
+      <div class="row">
+        <div class="col-12 col-sm-6">
+          Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip
+          Amount / person Total / person Reset
+        </div>
+        <div class="col-12 col-sm-6" id="tipAmound-background">ragrgarga</div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
