--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript" src="script.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,27 +26,63 @@
     <style></style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="back-background">
       <div class="title">
         <h3>S P L I</h3>
         <h3>T T E R</h3>
       </div>
-    </div>
-    <div class="container" id="spliter-background">
-      <div class="row">
-        <div class="col-12 col-sm-6">
-          Bill Select Tip % 5% 10% 15% 25% 50% Custom Number of People Tip
-          Amount / person Total / person Reset
-        </div>
-        <div class="col-12 col-sm-6" id="tipAmound-background">ragrgarga</div>
-      </div>
-    </div>
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Dafydd James</a>.
+      <div class="container" id="spliter-background">
+        <div class="row" id="two-columns">
+          <div class="col-12 col-sm-6">
+            <p>Bill</p>
+            <input
+              placeholder="$"
+              id="billAmount"
+              type="number"
+              onkeyup="getTipAmount(this.value)"
+            />
+            <p>Select Tip %</p>
+            <div class="row tip-buttons">
+              <div class="col-4">
+                <button value="0.05" id="tipAmount">5%</button>
+              </div>
+              <div class="col-4">
+                <button value="0.10">10%</button>
+              </div>
+              <div class="col-4">
+                <button value="0.15">15%</button>
+              </div>
+              <div class="col-4">
+                <button value="0.25">25%</button>
+              </div>
+              <div class="col-4">
+                <button value="0.50">50%</button>
+              </div>
+              <div class="col-4" id="custom-tip">
+                <button>Custom</button>
+              </div>
+            </div>
+            <p>Number of People</p>
+            <input placeholder="" />
+          </div>
+          <div class="col-12 col-sm-6" id="tipAmound-background">
+            <p>Tip Amount</p>
+            <p>/ person</p>
+            <input type="number" id="billOutput" readonly />
+            <p>Total</p>
+            <p>/ person</p>
+            <button id="reset-button">RESET</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Dafydd James</a>.
+      </div>
     </div>
   </body>
 </html>
